# zencoder-interview

./: .gitignore  CLAUDE.md  README.md  devbox.json  docker-compose.yml  oxlint.json  package.json  playwright.config.ts  pnpm-lock.yaml
docs/: ENTRY_POINT.md  TECH_SETUP.md  competitor-analysis.md  product-requirements.md  task.md
docs/mvp/: architecture.md  budget-distribution.md  design-system.md  mvp-scope.md  reatom-patterns.md  reatom-state-organization.md  (+2 more)
e2e/: costs.test.ts  filters.test.ts  live.test.ts  navigation.test.ts  overview.test.ts  settings.test.ts  teams.test.ts
services/rust-simulator/: Cargo.toml  Dockerfile
services/rust-simulator/migrations/postgres/: 002_create_daily_session_summary.sql  003_create_daily_token_stats.sql  004_create_daily_quality_stats.sql  005_create_team_user_stats.sql  006_create_alerts_log.sql  007_create_budget_config.sql
services/rust-simulator/migrations/timescaledb/: 001_create_teams_users.sql  002_create_agent_events.sql  003_create_indexes.sql
services/rust-simulator/src/: lib.rs  main.rs  observe.rs
services/rust-simulator/src/db/: mod.rs  postgres.rs  timescale.rs
services/rust-simulator/src/kafka/: consumer.rs  mod.rs  producer.rs
services/rust-simulator/src/models/: budget.rs  events.rs  mod.rs  pricing.rs  team.rs
services/rust-simulator/src/simulator/: generator.rs  mod.rs  realtime.rs  session.rs
services/rust-simulator/src/transformer/: aggregator.rs  alerts.rs  consumer.rs  mod.rs
services/rust-simulator/tests/: aggregation_tests.rs  fixtures.rs  generator_tests.rs  pricing_tests.rs
(+18 files in other folders)
