[package]
name = "zendash-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "rust_decimal", "migrate"] }
rdkafka = { version = "0.36", features = ["cmake-build"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"
anyhow = "1"
tokio-stream = "0.1"
async-stream = { version = "0.3", optional = true }

[features]
default = []
kafka = ["rdkafka", "async-stream"]
